src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Allowed_Customer_Groups__c</fullName>
        <label>Allowed Customer Groups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Businesses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowed_Master_Products__c</fullName>
        <label>Allowed Master Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity B2C</fullName>
                </value>
                <value>
                    <fullName>Electricity B2B</fullName>
                </value>
                <value>
                    <fullName>Electricity Social Tariff</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Gas Social Tariff</fullName>
                </value>
                <value>
                    <fullName>E-Thermostat</fullName>
                </value>
                <value>
                    <fullName>Boiler Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowed_Payment_Methods__c</fullName>
        <label>Allowed Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Direct debit</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Commercial Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Alternative Product)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archived_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for archiving the product</inlineHelpText>
        <label>Archived Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARPU Standard Brand</fullName>
                </value>
                <value>
                    <fullName>ARPU Eco Brand</fullName>
                </value>
                <value>
                    <fullName>ARPU Luxurious Brand</fullName>
                </value>
                <value>
                    <fullName>ARPU Price Fighter Brand</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_s_Logo__c</fullName>
        <formula>IF(ISPICKVAL(Brand__c, &apos;Blue&apos;), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002kXw&amp;oid=00D28000000WToJ&amp;lastMod=1449565130000&quot;, &quot;Blue&quot; , 30, 30), 
IF(ISPICKVAL(Brand__c, &apos;Green&apos;), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002kc8&amp;oid=00D28000000WToJ&amp;lastMod=1449565254000&quot;, &quot;Green&quot; , 30, 30), 
IF(ISPICKVAL(Brand__c, &apos;Grey&apos;), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002kdG&amp;oid=00D28000000WToJ&amp;lastMod=1449565288000&quot;, &quot;Grey&quot; , 30, 30), 
IF(ISPICKVAL(Brand__c, &apos;Orange&apos;), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002ke9&amp;oid=00D28000000WToJ&amp;lastMod=1449565319000&quot;, &quot;Orange&quot; , 30, 30), 
IF(ISPICKVAL(Brand__c, &apos;Red&apos;), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002kfW&amp;oid=00D28000000WToJ&amp;lastMod=1449565356000&quot;, &quot;Red&quot; , 30, 30),
IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=015280000002kgK&amp;oid=00D28000000WToJ&amp;lastMod=1449565383000&quot;, &quot;Yellow&quot; , 30, 30) 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand&apos;s Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charges_for_breach_of_contract__c</fullName>
        <label>Charges for Breach of Contract</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Product_Id__c</fullName>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Commercial Product Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_Years__c</fullName>
        <label>Contract Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Termination__c</fullName>
        <label>Contract Termination</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEMO_Price__c</fullName>
        <label>DEMO Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_of_item__c</fullName>
        <label>Description of Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_End_Date__c</fullName>
        <label>Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Start_Date__c</fullName>
        <label>Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Euro/kWh</fullName>
                </value>
                <value>
                    <fullName>Non-financial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value_Unit__c</fullName>
        <label>Discount Value (Unit)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electiricity_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electiricity bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Contract__c</fullName>
        <label>End of Contract</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Type__c</fullName>
        <label>Energy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Bi-fuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>One Time Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gas_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gas Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Granted_After_Amount__c</fullName>
        <label>Granted After (Amount)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granted_After_Unit__c</fullName>
        <label>Granted After (Unit)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ledger_Account__c</fullName>
        <label>Ledger Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ledger account 1</fullName>
                </value>
                <value>
                    <fullName>Ledger account 2</fullName>
                </value>
                <value>
                    <fullName>Ledger account 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Product_Type_Icon__c</fullName>
        <formula>Master_Product__r.Type_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Product Type Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Product_Type__c</fullName>
        <formula>TEXT(Master_Product__r.Type__c)</formula>
        <label>Master Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product</label>
        <referenceTo>Master_Product__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximal_Consumption__c</fullName>
        <label>Maximal Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimal_Consumption__c</fullName>
        <label>Minimal Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_period__c</fullName>
        <inlineHelpText>Notice period in days</inlineHelpText>
        <label>Notice period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Bundle_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Bundle Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Product)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Commercial_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Commercial Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Commercial Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Discount_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Discount Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Product)</relationshipLabel>
        <relationshipName>Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Green__c</fullName>
        <inlineHelpText>Percentage Green / Percentage Grey</inlineHelpText>
        <label>Percentage Green</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Grey__c</fullName>
        <formula>1 - Percentage_Green__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Grey</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Item_Groups__c</fullName>
        <label>Percentage Item Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supply costs</fullName>
                </value>
                <value>
                    <fullName>Connection costs</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_rato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pro rato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Rating__c</fullName>
        <formula>IF( AND(Score__c  &gt;= 0,Score__c &lt;=0.49), IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 star image&quot;), IF(AND(Score__c  &gt;= 0.50,Score__c &lt;=1.49),  IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 star image&quot;),  IF(AND(Score__c  &gt;= 1.50,Score__c &lt;=2.49), IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 star image&quot;),  IF(AND(Score__c  &gt;= 2.50,Score__c &lt;=3.49), IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 star image&quot;),  IF(AND(Score__c  &gt;= 3.50,Score__c &lt;=4.49), IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 star image&quot;),  IF(AND(Score__c  &gt;= 4.50,Score__c &lt;=5.00), IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 star image&quot;), IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 star image&quot;)) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Master_Product__r.Type_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_for_Fulfillment__c</fullName>
        <label>Remarks for Fulfillment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code__c</fullName>
        <label>SAP Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <referenceTo>Service_Provider__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tariff_Description__c</fullName>
        <label>Tariff Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <label>Tax Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax group 1</fullName>
                </value>
                <value>
                    <fullName>Tax group 2</fullName>
                </value>
                <value>
                    <fullName>Tax group 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Type__c</fullName>
        <label>Utility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Grey / Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Master_Product_Type__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Contract_Duration_Years__c</columns>
        <columns>Notice_period__c</columns>
        <columns>Charges_for_breach_of_contract__c</columns>
        <columns>Brand_s_Logo__c</columns>
        <columns>Product_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Bundles</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Fee_Type__c</columns>
        <columns>Contract_Duration_Years__c</columns>
        <columns>Notice_period__c</columns>
        <columns>Charges_for_breach_of_contract__c</columns>
        <columns>Brand_s_Logo__c</columns>
        <columns>Product_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Bundle</value>
        </filters>
        <label>All Bundles</label>
    </listViews>
    <listViews>
        <fullName>All_Commercial_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Master_Product__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Contract_Duration_Years__c</columns>
        <columns>Notice_period__c</columns>
        <columns>Charges_for_breach_of_contract__c</columns>
        <columns>Product_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Commercial_Product</value>
        </filters>
        <label>All Commercial Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Discounts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Discount_Type__c</columns>
        <columns>Discount_Value__c</columns>
        <columns>Description_of_item__c</columns>
        <columns>Brand_s_Logo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Discount</value>
        </filters>
        <label>All Discounts</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Commodity_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Contract_Duration_Years__c</columns>
        <columns>Product_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Commercial_Product</value>
        </filters>
        <filters>
            <field>Master_Product_Type__c</field>
            <operation>equals</operation>
            <value>Non-commodity</value>
        </filters>
        <label>All Non-Commodity Products</label>
    </listViews>
    <recordTypes>
        <fullName>Bundle</fullName>
        <active>true</active>
        <label>Bundle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Product</fullName>
        <active>true</active>
        <label>Commercial Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Discount</fullName>
        <active>true</active>
        <label>Discount</label>
    </recordTypes>
    <validationRules>
        <fullName>Active_Products_cant_be_edited</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE(IsActive) = TRUE &amp;&amp; NOT(LastModifiedDate &lt;&gt; LastModifiedDate) &amp;&amp; NOT( Archived_Product__c = TRUE)</errorConditionFormula>
        <errorMessage>Active products cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Active_cannot_be_unchecked_manually</fullName>
        <active>false</active>
        <description>The following should not be allowed:
1. Go from Active to New (i.e. manually unchecking the Active checkbox)</description>
        <errorConditionFormula>ISCHANGED(IsActive) &amp;&amp;  IsActive  = FALSE</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>Active Products cannot be changed to new status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived_Product_cannot_be_Activated</fullName>
        <active>true</active>
        <description>The following should not be allowed:
2.Go anywhere from Archived</description>
        <errorConditionFormula>(Archived_Product__c = TRUE &amp;&amp;  PRIORVALUE(IsActive) = FALSE)</errorConditionFormula>
        <errorDisplayField>Archived_Product__c</errorDisplayField>
        <errorMessage>Archived Product cannot be activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived_Product_cannot_be_New</fullName>
        <active>true</active>
        <description>The following should not be allowed:
3.Go from Archived to New</description>
        <errorConditionFormula>( PRIORVALUE(Archived_Product__c) = TRUE &amp;&amp; Archived_Product__c = FALSE &amp;&amp; IsActive = FALSE)</errorConditionFormula>
        <errorMessage>Archived Product cannot be changed to new status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived_Product_cannot_be_unchecked</fullName>
        <active>true</active>
        <description>The following should not be allowed:
2.Go anywhere from Archived</description>
        <errorConditionFormula>(ISCHANGED( Archived_Product__c ) &amp;&amp;  Archived_Product__c  = FALSE)</errorConditionFormula>
        <errorDisplayField>Archived_Product__c</errorDisplayField>
        <errorMessage>Archived Product checkbox cannot be unchecked manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Archived_Products_cant_be_edited</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE( Archived_Product__c )   = TRUE &amp;&amp; NOT(LastModifiedDate &lt;&gt; LastModifiedDate)</errorConditionFormula>
        <errorMessage>Archived products cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_activate_product_while_creating</fullName>
        <active>false</active>
        <description>we cannot activate product while creating</description>
        <errorConditionFormula>if(ISNEW()&amp;&amp; IsActive ,true,false)</errorConditionFormula>
        <errorMessage>Can&apos;t activate the product while creating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_should_be_betwen_0_and_5</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Score__c  &lt; 0.00,Score__c  &gt; 5.00)</errorConditionFormula>
        <errorMessage>Score can not be less than 0.00 or greater than 5.00</errorMessage>
    </validationRules>
</CustomObject>